# projectengram

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  db-dev.md  frontend-dev.md  graph-dev.md  python-backend-dev.md  rust-shell-dev.md  test-engineer.md  ui-animation-dev.md
docs/: ARCHITECTURE.md  DESIGN-SYSTEM.md  INSTRUCTIONS.md
sidecar/: __init__.py  config.py  main.py  pyproject.toml
sidecar/api/: clusters.py  config_routes.py  edges.py  positions.py  projects.py  scan.py  tags.py  websocket.py
sidecar/db/: __init__.py  engine.py  session.py
sidecar/db/migrations/: 0001_init.sql  __init__.py  migrator.py
sidecar/models/: __init__.py  cluster.py  config.py  edge.py  node_position.py  project.py  tag.py
sidecar/scanner/: discovery.py  edge_computer.py  orchestrator.py  watcher.py
sidecar/scanner/analyzers/: __init__.py  _constants.py  frameworks.py  git_analyzer.py  languages.py  project_type.py  readme.py  size.py
sidecar/utils/: debounce.py  time.py  ulid.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: engram-sidecar-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  sidecar.rs
src/hooks/: useTauriCommands.ts
src/styles/: globals.css
tests/backend/: conftest.py  test_clusters_api.py  test_config_api.py  test_debounce.py  test_discovery.py  test_edge_computer.py  test_edges_api.py  test_engine.py  test_frameworks.py  test_git_analyzer.py  test_health.py  test_languages.py  (+13 more)
(+8 files in other folders)
